@@ -1,6 +1,3 @@
-bind
-undefined vs null
-enable global key handler
 link handling + scale
 
 more information on demo page:
